Fixed bad links

--- a/index.html
+++ b/index.html
@@ -62,11 +62,11 @@
             /
             <a href="https://www.mlp.cz/cz/">MLP</a>
             /
-            <a href="b-ok.cc/">B-ok</a>
+            <a href="https://www.b-ok.cc/">B-ok</a>
             /
             <a href="https://www.goodreads.com/genres">Goodreads</a>
             /
-            <a href="https://www.goodreads.com/genres">Jnovels</a>
+            <a href="https://jnovels.com/">Jnovels</a>
           </div>
         </li>
       </div>
@@ -97,12 +97,6 @@
             <a href="https://nyaa.si/">Nyaa</a>
             /
             <a href="https://anime.plus/">Anime+</a>
-            /
-            <a href="https://translate.google.com/">G-Překladač</a>
-            /
-            <a href="https://prirucka.ujc.cas.cz/">UJČ</a>
-            /
-            <a href="https://ankiweb.net/decks/">Anki</a>
           </div>
         </li>
       </div>
